--- a/ElixirUK.Rhtml
+++ b/ElixirUK.Rhtml
@@ -1,13 +1,12 @@
 <html>
 
 <head>
-<title>Title</title>
+<title>ELIXIR UK milestones made by Khaled Jumah on behalf of Potworloicz team. </title>
 </head>
 
 <body>
 
-# ELIXIR UK milestones made by Khaled Jumah on behalf of Potworloicz team. 
-
+s
 
 
 
